# BeamUQ

./: .gitignore  CONSTRUCT_part1.html  CONSTRUCT_part2.html  CUQI_project_part.ipynb  CUQI_project_part.slides.html  Zs_MAP.dill  Zs_MAP.pickle  beamUQ.ipynb  beam_model_1D.py  hydraulic.py  plot_settings.py  samples_MH.dill  samples_NUTS.dill  testBeam.py  utils_plotting.py
cpp/: CMakeLists.txt  cmake_wrapper.cpp
cpp/fem/: CMakeLists.txt  elements.cpp  elements.h  fem.cpp  fem.h  recoverResults.cpp  recoverResults.h  types.h
cpp/fem/sandbox/elementData/: a.out  main.cpp
cpp/fem/sandbox/indices/: .rendered.computation.cpp  computation.cp311-win_amd64.pyd  computation.cpp  computation.h  run.py
cpp/fem/sandbox/simple_program/: .rendered.computation.cpp  computation copy.h  computation.cp310-win_amd64.pyd  computation.cpp  main.cpp  run.py  run.sh  squareroot.cpp  squareroot.h
cpp/lib/mma/: CMakeLists.txt
cpp/lib/mma/src/: CMakeLists.txt  MMA.cpp  MMA.h
cpp/lib/mma/tests/: testMMA.cpp
cpp/util/: CMakeLists.txt  utilities.cpp  utilities.h  writeVTU.cpp  writeVTU.h
cpp/util/sandbox/: .rendered.test.cpp  run.py  test.cp311-win_amd64.pyd  test.cpp
cpp/util/tests/: main  main.cpp  matrix.csv  output.prof  output.txt  run.sh
